refactored connection logic, implemented disconnection
