# mojefinance-service/external-api-gateway/src/main/java/cvut/fel/sit/mojefinance/external/api/gateway/messaging/airbank/service/AirBankAdapter.java
@@ -1,7 +1,0 @@
-package cvut.fel.sit.mojefinance.external.api.gateway.messaging.airbank.service;
-
-import cvut.fel.sit.mojefinance.external.api.gateway.data.entity.ConnectedBank;
-
-public interface AirBankAdapter {
-    ConnectedBank connectAirBank(String code);
-}
