# mojefinance-service/external-api-gateway/src/main/java/cvut/fel/sit/mojefinance/external/api/gateway/messaging/cs/service/CeskaSporitelnaAdapter.java
@@ -1,7 +1,0 @@
-package cvut.fel.sit.mojefinance.external.api.gateway.messaging.cs.service;
-
-import cvut.fel.sit.mojefinance.external.api.gateway.data.entity.ConnectedBank;
-
-public interface CeskaSporitelnaAdapter {
-    ConnectedBank connectCeskaSporitelna(String code);
-}
