# mojefinance-service/external-api-gateway/src/main/java/cvut/fel/sit/mojefinance/external/api/gateway/messaging/csob/service/CSOBAdapter.java
@@ -1,7 +1,0 @@
-package cvut.fel.sit.mojefinance.external.api.gateway.messaging.csob.service;
-
-import cvut.fel.sit.mojefinance.external.api.gateway.data.entity.ConnectedBank;
-
-public interface CSOBAdapter {
-    ConnectedBank connectCSOB(String code);
-}
