# mojefinance-service/external-api-gateway/src/main/java/cvut/fel/sit/mojefinance/external/api/gateway/messaging/kb/service/KBAdapter.java
@@ -1,7 +1,0 @@
-package cvut.fel.sit.mojefinance.external.api.gateway.messaging.kb.service;
-
-import cvut.fel.sit.mojefinance.external.api.gateway.data.entity.ConnectedBank;
-
-public interface KBAdapter {
-    ConnectedBank connectKB(String code);
-}
