# mojefinance-service/external-api-gateway/src/main/java/cvut/fel/sit/mojefinance/external/api/gateway/messaging/kb/service/KBAdapterImpl.java
@@ -1,24 +1,0 @@
-package cvut.fel.sit.mojefinance.external.api.gateway.messaging.kb.service;
-
-import cvut.fel.sit.mojefinance.external.api.gateway.data.entity.ConnectedBank;
-import cvut.fel.sit.mojefinance.external.api.gateway.messaging.kb.client.KBApiFeignClient;
-import cvut.fel.sit.mojefinance.external.api.gateway.util.Constants;
-import cvut.fel.sit.mojefinance.external.api.gateway.messaging.util.ExchangeTokenHelper;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
-
-@Service
-@RequiredArgsConstructor
-public class KBAdapterImpl implements KBAdapter {
-    private final KBApiFeignClient kbApiFeignClient;
-    private final ExchangeTokenHelper exchangeTokenHelper;
-
-    @Override
-    public ConnectedBank connectKB(String code) {
-        exchangeTokenHelper.exchangeToken(Constants.KB_CLIENT_REGISTRATION_ID, code);
-        return ConnectedBank.builder()
-                .name(Constants.KB_NAME)
-                .build();
-    }
-}
